{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 47,
  "lineage": "0088a3aa-4702-4e56-9e9c-1389ac947f84",
  "resources": [
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:664111151564:security-group/sg-0e8bc8f28e1d15fd3",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-0e8bc8f28e1d15fd3",
            "ingress": [],
            "name": "tinder-languages-cluster-sa-cluster-20251228210657995900000006",
            "name_prefix": "tinder-languages-cluster-sa-cluster-",
            "owner_id": "664111151564",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "production",
              "Name": "tinder-languages-cluster-sa-cluster",
              "Project": "tinder-languages",
              "Region": "south-america"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "tinder-languages-cluster-sa-cluster",
              "Project": "tinder-languages",
              "Region": "south-america"
            },
            "timeouts": null,
            "vpc_id": "vpc-01d9165348225d5cd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:664111151564:security-group/sg-0327c5d6f5538f3d1",
            "description": "EKS node shared security group",
            "egress": [],
            "id": "sg-0327c5d6f5538f3d1",
            "ingress": [],
            "name": "tinder-languages-cluster-sa-node-20251228210657922000000005",
            "name_prefix": "tinder-languages-cluster-sa-node-",
            "owner_id": "664111151564",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "production",
              "Name": "tinder-languages-cluster-sa-node",
              "Project": "tinder-languages",
              "Region": "south-america",
              "kubernetes.io/cluster/tinder-languages-cluster-sa": "owned"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "tinder-languages-cluster-sa-node",
              "Project": "tinder-languages",
              "Region": "south-america",
              "kubernetes.io/cluster/tinder-languages-cluster-sa": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-01d9165348225d5cd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-2464492543",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0e8bc8f28e1d15fd3",
            "security_group_rule_id": "sgr-0b47e0c51e873c853",
            "self": false,
            "source_security_group_id": "sg-0327c5d6f5538f3d1",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress",
            "from_port": 0,
            "id": "sgrule-1070832339",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0327c5d6f5538f3d1",
            "security_group_rule_id": "sgr-025b76b12c7e0e55c",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-3097558712",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0327c5d6f5538f3d1",
            "security_group_rule_id": "sgr-09cd19e82dca1316d",
            "self": false,
            "source_security_group_id": "sg-0e8bc8f28e1d15fd3",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "ingress_cluster_4443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 4443/tcp webhook",
            "from_port": 4443,
            "id": "sgrule-383183227",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0327c5d6f5538f3d1",
            "security_group_rule_id": "sgr-0f675caf51c728a8d",
            "self": false,
            "source_security_group_id": "sg-0e8bc8f28e1d15fd3",
            "timeouts": null,
            "to_port": 4443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "ingress_cluster_6443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 6443/tcp webhook",
            "from_port": 6443,
            "id": "sgrule-3751055085",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0327c5d6f5538f3d1",
            "security_group_rule_id": "sgr-0c32b77b990cd782a",
            "self": false,
            "source_security_group_id": "sg-0e8bc8f28e1d15fd3",
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "ingress_cluster_8443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 8443/tcp webhook",
            "from_port": 8443,
            "id": "sgrule-3435705036",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0327c5d6f5538f3d1",
            "security_group_rule_id": "sgr-028713e30dda560d9",
            "self": false,
            "source_security_group_id": "sg-0e8bc8f28e1d15fd3",
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "ingress_cluster_9443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 9443/tcp webhook",
            "from_port": 9443,
            "id": "sgrule-2825486599",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0327c5d6f5538f3d1",
            "security_group_rule_id": "sgr-081480aad2fb21949",
            "self": false,
            "source_security_group_id": "sg-0e8bc8f28e1d15fd3",
            "timeouts": null,
            "to_port": 9443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-3467940297",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0327c5d6f5538f3d1",
            "security_group_rule_id": "sgr-029afe2a5abc8e05d",
            "self": false,
            "source_security_group_id": "sg-0e8bc8f28e1d15fd3",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "ingress_nodes_ephemeral",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node ingress on ephemeral ports",
            "from_port": 1025,
            "id": "sgrule-967912768",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0327c5d6f5538f3d1",
            "security_group_rule_id": "sgr-03754c8e33f1ff129",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-2292727240",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0327c5d6f5538f3d1",
            "security_group_rule_id": "sgr-06934aa021c30d520",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS UDP",
            "from_port": 53,
            "id": "sgrule-754425383",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-0327c5d6f5538f3d1",
            "security_group_rule_id": "sgr-0f5641871dd8fbb96",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:664111151564:network-acl/acl-011f239905464a116",
            "default_network_acl_id": "acl-011f239905464a116",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-011f239905464a116",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "664111151564",
            "subnet_ids": [
              "subnet-020e70fb61817c2ff",
              "subnet-05e223c1c05d6a85a",
              "subnet-0c7e92663d3417fc4"
            ],
            "tags": {
              "Environment": "production",
              "Name": "tinder-languages-vpc-sa-default",
              "Project": "tinder-languages",
              "Region": "south-america"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "tinder-languages-vpc-sa-default",
              "Project": "tinder-languages",
              "Region": "south-america"
            },
            "vpc_id": "vpc-01d9165348225d5cd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:664111151564:route-table/rtb-07af586627582e5b5",
            "default_route_table_id": "rtb-07af586627582e5b5",
            "id": "rtb-07af586627582e5b5",
            "owner_id": "664111151564",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Environment": "production",
              "Name": "tinder-languages-vpc-sa-default",
              "Project": "tinder-languages",
              "Region": "south-america"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "tinder-languages-vpc-sa-default",
              "Project": "tinder-languages",
              "Region": "south-america"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-01d9165348225d5cd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:664111151564:security-group/sg-0f791f526e4a628ec",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0f791f526e4a628ec",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "664111151564",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "production",
              "Name": "tinder-languages-vpc-sa-default",
              "Project": "tinder-languages",
              "Region": "south-america"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "tinder-languages-vpc-sa-default",
              "Project": "tinder-languages",
              "Region": "south-america"
            },
            "vpc_id": "vpc-01d9165348225d5cd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-023c7d255fbf31255",
            "arn": "arn:aws:ec2:sa-east-1:664111151564:elastic-ip/eipalloc-023c7d255fbf31255",
            "domain": "vpc",
            "id": "eipalloc-023c7d255fbf31255",
            "network_border_group": "sa-east-1",
            "public_dns": "ec2-52-67-90-61.sa-east-1.compute.amazonaws.com",
            "public_ip": "52.67.90.61",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "production",
              "Name": "tinder-languages-vpc-sa-sa-east-1a",
              "Project": "tinder-languages",
              "Region": "south-america"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "tinder-languages-vpc-sa-sa-east-1a",
              "Project": "tinder-languages",
              "Region": "south-america"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:664111151564:internet-gateway/igw-020c6565f624dcebd",
            "id": "igw-020c6565f624dcebd",
            "owner_id": "664111151564",
            "tags": {
              "Environment": "production",
              "Name": "tinder-languages-vpc-sa",
              "Project": "tinder-languages",
              "Region": "south-america"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "tinder-languages-vpc-sa",
              "Project": "tinder-languages",
              "Region": "south-america"
            },
            "vpc_id": "vpc-01d9165348225d5cd"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-023c7d255fbf31255",
            "association_id": "eipassoc-06a3c34da6dbade47",
            "connectivity_type": "public",
            "id": "nat-024a9b00b4e7951cd",
            "network_interface_id": "eni-00fdc1c659f728ee7",
            "private_ip": "10.1.101.236",
            "public_ip": "52.67.90.61",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-020e70fb61817c2ff",
            "tags": {
              "Environment": "production",
              "Name": "tinder-languages-vpc-sa-sa-east-1a",
              "Project": "tinder-languages",
              "Region": "south-america"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "tinder-languages-vpc-sa-sa-east-1a",
              "Project": "tinder-languages",
              "Region": "south-america"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-011004ce9b137db701080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-024a9b00b4e7951cd",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-011004ce9b137db70",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-020c6565f624dcebd",
            "id": "r-rtb-09e1124ee2b95b3951080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-09e1124ee2b95b395",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:664111151564:route-table/rtb-011004ce9b137db70",
            "id": "rtb-011004ce9b137db70",
            "owner_id": "664111151564",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "production",
              "Name": "tinder-languages-vpc-sa-private",
              "Project": "tinder-languages",
              "Region": "south-america"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "tinder-languages-vpc-sa-private",
              "Project": "tinder-languages",
              "Region": "south-america"
            },
            "timeouts": null,
            "vpc_id": "vpc-01d9165348225d5cd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:664111151564:route-table/rtb-09e1124ee2b95b395",
            "id": "rtb-09e1124ee2b95b395",
            "owner_id": "664111151564",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "production",
              "Name": "tinder-languages-vpc-sa-public",
              "Project": "tinder-languages",
              "Region": "south-america"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "tinder-languages-vpc-sa-public",
              "Project": "tinder-languages",
              "Region": "south-america"
            },
            "timeouts": null,
            "vpc_id": "vpc-01d9165348225d5cd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02f7d417f9484223c",
            "route_table_id": "rtb-011004ce9b137db70",
            "subnet_id": "subnet-07e058501cd5b3c45"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-070ed8b319d1a9920",
            "route_table_id": "rtb-011004ce9b137db70",
            "subnet_id": "subnet-05e223c1c05d6a85a"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0acf6425eb81f6c8f",
            "route_table_id": "rtb-09e1124ee2b95b395",
            "subnet_id": "subnet-020e70fb61817c2ff"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03523b77116b48f03",
            "route_table_id": "rtb-09e1124ee2b95b395",
            "subnet_id": "subnet-0c7e92663d3417fc4"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:664111151564:subnet/subnet-07e058501cd5b3c45",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "sa-east-1a",
            "availability_zone_id": "sae1-az1",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07e058501cd5b3c45",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "664111151564",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "production",
              "Name": "tinder-languages-vpc-sa-private-sa-east-1a",
              "Project": "tinder-languages",
              "Region": "south-america",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "tinder-languages-vpc-sa-private-sa-east-1a",
              "Project": "tinder-languages",
              "Region": "south-america",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-01d9165348225d5cd"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:664111151564:subnet/subnet-05e223c1c05d6a85a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "sa-east-1b",
            "availability_zone_id": "sae1-az2",
            "cidr_block": "10.1.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05e223c1c05d6a85a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "664111151564",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "production",
              "Name": "tinder-languages-vpc-sa-private-sa-east-1b",
              "Project": "tinder-languages",
              "Region": "south-america",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "tinder-languages-vpc-sa-private-sa-east-1b",
              "Project": "tinder-languages",
              "Region": "south-america",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-01d9165348225d5cd"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:664111151564:subnet/subnet-020e70fb61817c2ff",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "sa-east-1a",
            "availability_zone_id": "sae1-az1",
            "cidr_block": "10.1.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-020e70fb61817c2ff",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "664111151564",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "production",
              "Name": "tinder-languages-vpc-sa-public-sa-east-1a",
              "Project": "tinder-languages",
              "Region": "south-america",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "tinder-languages-vpc-sa-public-sa-east-1a",
              "Project": "tinder-languages",
              "Region": "south-america",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-01d9165348225d5cd"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:664111151564:subnet/subnet-0c7e92663d3417fc4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "sa-east-1b",
            "availability_zone_id": "sae1-az2",
            "cidr_block": "10.1.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c7e92663d3417fc4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "664111151564",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "production",
              "Name": "tinder-languages-vpc-sa-public-sa-east-1b",
              "Project": "tinder-languages",
              "Region": "south-america",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "tinder-languages-vpc-sa-public-sa-east-1b",
              "Project": "tinder-languages",
              "Region": "south-america",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-01d9165348225d5cd"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:664111151564:vpc/vpc-01d9165348225d5cd",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-011f239905464a116",
            "default_route_table_id": "rtb-07af586627582e5b5",
            "default_security_group_id": "sg-0f791f526e4a628ec",
            "dhcp_options_id": "dopt-0a0f0f818e3221753",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-01d9165348225d5cd",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-07af586627582e5b5",
            "owner_id": "664111151564",
            "tags": {
              "Environment": "production",
              "Name": "tinder-languages-vpc-sa",
              "Project": "tinder-languages",
              "Region": "south-america"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "tinder-languages-vpc-sa",
              "Project": "tinder-languages",
              "Region": "south-america"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}